--- a/style.css
+++ b/style.css
@@ -43,7 +43,43 @@ body {
 
 .grid .show-boom {
   opacity: 1;
+  position: relative;
   background-color: red;
+}
+
+.grid .show-boom::after {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 20%;
+  left: 20%;
+  width: 18px;
+  height: 18px;
+  background-color: black;
+  border-radius: 50%;
+}
+.grid .show-boom::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: -3%;
+  left: -2%;
+  width: 30px;
+  height: 32px;
+  background-color: black;
+  clip-path: polygon(
+    50% 0%,
+    61% 35%,
+    98% 35%,
+    68% 57%,
+    79% 91%,
+    50% 70%,
+    21% 91%,
+    32% 57%,
+    2% 35%,
+    39% 35%
+  );
+  border-radius: 50%;
 }
 
 .grid .number {
@@ -68,10 +104,26 @@ body {
   color: red;
   font-weight: bold;
   font-family: sans-serif;
-  letter-spacing: 2px;
-
-  /*  border: dotted 4px red; */
+  letter-spacing: 2px; 
 
   margin-top: 1.5rem;
   padding: 0.5em;
+}
+
+#game-restart {
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-family: "Roboto", sans-serif;
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0.4rem;
+  border: unset;
+  background-color: lightblue;
+  transition: all 0.4s ease-in-out;
+}
+
+#game-restart:hover,
+#game-restart:focus {
+  background-color: black;
+  color: lightblue;
 }
