--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *::after {
   box-sizing: border-box;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -33,7 +34,7 @@ body {
 
 .flags-left {
   font-size: 1.5rem;
-  font-family: "Roboto", sans-serif;
+
   margin-left: 10px;
   color: #fff;
 }
@@ -41,7 +42,7 @@ body {
 .timer {
   color: #fff;
   font-size: 1.5rem;
-  font-family: "Roboto", sans-serif;
+
   margin-right: 1rem;
 }
 
@@ -111,7 +112,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 1.3rem;
-  font-weight: bolder;
+  font-weight: bold;
   color: #fff;
 }
 
@@ -119,27 +120,27 @@ body {
   background-color: #43d221;
 }
 
-.grid .numbers {
-  background-color: blue;
+.numbers {
+  background-color: rgb(79, 83, 87);
 }
 
-.one {
+.grid .numbers .one {
   color: #fff;
 }
 
-.two {
+.grid .two {
   color: greenyellow;
 }
 
-.three {
+.grid .three {
   color: orange;
 }
 
-.four {
+.grid .four {
   color: red;
 }
 
-.five {
+.grid .five {
   color: purple;
 }
 
@@ -192,14 +193,44 @@ body {
 }
 
 .game-txt {
+  position: relative;
   font-size: 2.4rem;
   color: red;
+
   font-weight: bold;
   font-family: sans-serif;
   letter-spacing: 2px;
 
-  margin-top: 1.5rem;
+  padding: 1.5em;
+
+  border-radius: 100rem;
+}
+
+.over::before {
+  position: absolute;
+  content: "GAME";
+  display: block;
+  color: red;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 5rem;
   padding: 0.5em;
+
+  top: 40%;
+  left: 20%;
+}
+.over::after {
+  position: absolute;
+  content: "OVER";
+  display: block;
+  color: red;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 5rem;
+  padding: 0.5em;
+
+  top: 40%;
+  right: 21vw;
 }
 
 #game-restart {
@@ -218,4 +249,12 @@ body {
 #game-restart:focus {
   background-color: black;
   color: lightblue;
+}
+
+.gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(59, 145, 167, 1) 25%,
+    rgba(28, 11, 96, 1) 100%
+  );
 }
